community/objects/Shift_Work__c.object
<CustomObject>
    <fields>
        <fullName>Above_40_Bill_Rate__c</fullName>
        <label>Above 40 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Above_40_Hrs__c</fullName>
        <label>Above 40 Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Above_40_Pay_Rate__c</fullName>
        <label>Above 40 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount__c</fullName>
        <formula>Above_40_Bill_Rate__c * Above_40_Hrs__c + DT_Bill_Rate__c * DT_Hrs__c + OT_Bill_Rate__c * OT_Hrs__c  + Regular_Bill_Rate__c* Regular_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Rate_Card_Detail_Time_Type_Name_Hid__c</fullName>
        <formula>Bill_Rate_Card_Detail__r.Time_Type__r.Name</formula>
        <label>Bill Rate Card Detail Time Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Rate_Card_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Rate Card Detail</label>
        <referenceTo>Rate_Card_Detail__c</referenceTo>
        <relationshipLabel>Shift Works (Bill Rate Card Detail)</relationshipLabel>
        <relationshipName>Shift_Works</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block_of_Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Block of Time</label>
        <referenceTo>Block_of_Time__c</referenceTo>
        <relationshipLabel>Shift Works</relationshipLabel>
        <relationshipName>Shift_Works</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Hidden__c</fullName>
        <formula>Timesheet__r.TR1__Closing_Report__r.Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Bill_Rate__c</fullName>
        <label>DT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DT_Hrs__c</fullName>
        <label>DT Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_Pay_Rate__c</fullName>
        <label>DT Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Hrs__c</fullName>
        <label>Daily Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE( Start_Date_Time__c )</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Differential_Bill_Amount__c</fullName>
        <label>Differential Bill Amount</label>
        <summarizedField>Shift_Work_Detail__c.Total_Bill_Amount__c</summarizedField>
        <summaryForeignKey>Shift_Work_Detail__c.Shift_Work__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Differential_Pay_Amount__c</fullName>
        <label>Differential Pay Amount</label>
        <summarizedField>Shift_Work_Detail__c.Total_Pay_Amount__c</summarizedField>
        <summaryForeignKey>Shift_Work_Detail__c.Shift_Work__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date_Time_Entered__c</fullName>
        <label>End Date Time Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_State_Hidden__c</fullName>
        <formula>TEXT(Timesheet__r.TR1__Job_Order__r.TR1__State_Area__c)</formula>
        <label>Job State Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OT_Bill_Rate__c</fullName>
        <label>OT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OT_Hrs__c</fullName>
        <label>OT Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OT_Pay_Rate__c</fullName>
        <label>OT Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Shift_Work_Name__c</fullName>
        <label>Parent Shift Work Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Shift_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Shift Work</label>
        <referenceTo>Shift_Work__c</referenceTo>
        <relationshipLabel>Child Shift Works</relationshipLabel>
        <relationshipName>Shift_Works</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Amount__c</fullName>
        <formula>Above_40_Pay_Rate__c* Above_40_Hrs__c + DT_Pay_Rate__c* DT_Hrs__c + OT_Pay_Rate__c* OT_Hrs__c + Regular_Pay_Rate__c* Regular_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Person_Placed__c</fullName>
        <formula>Timesheet__r.TR1__Consultant_Name__c</formula>
        <label>Person Placed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>TEXT(Timesheet__r.TR1__Closing_Report__r.Profile_Name__c)</formula>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Rate Card Detail</label>
        <referenceTo>Rate_Card_Detail__c</referenceTo>
        <relationshipLabel>Shift Works</relationshipLabel>
        <relationshipName>Shift_Works_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Hidden__c</fullName>
        <formula>CASESAFEID(Timesheet__r.TR1__Closing_Report__r.Placement_Rate_Card__r.Id)
/**CASESAFEID( Rate_Card_Detail__r.Rate_Card__c )**/</formula>
        <label>Rate Card Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Time_Type_Name_Hidden__c</fullName>
        <formula>Rate_Card_Detail__r.Time_Type__r.Name</formula>
        <label>Pay Rate Card Detail Time Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Time_Type_OT_Exempt_Hidden__c</fullName>
        <formula>Rate_Card_Detail__r.Time_Type__r.OT_Exempt__c</formula>
        <label>Rate Card Time Type OT Exempt Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Hrs__c</fullName>
        <label>Reg Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regular_Bill_Rate__c</fullName>
        <label>Regular Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regular_Hrs__c</fullName>
        <label>Regular Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regular_Pay_Rate__c</fullName>
        <label>Regular Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rounding_Rule_from_Client__c</fullName>
        <description>This is hidden field which will fetch Rounding Rule Value from Client</description>
        <formula>TEXT(  Timesheet__r.TR1__Closing_Report__r.Client__r.Rounding_Rule__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rounding Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time_Entered__c</fullName>
        <label>Start Date Time Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Type</label>
        <referenceTo>Time_Type__c</referenceTo>
        <relationshipLabel>Shift Works</relationshipLabel>
        <relationshipName>Shift_Works</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Detail</label>
        <referenceTo>TR1__Timesheet_Detail__c</referenceTo>
        <relationshipLabel>Shift Works (Timesheet Detail)</relationshipLabel>
        <relationshipName>Shift_Works1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet_Week_Ending_date__c</fullName>
        <formula>Timesheet__r.TR1__Week_Ending__c</formula>
        <label>Timesheet Week Ending date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Shift Works (Timesheet)</relationshipLabel>
        <relationshipName>Shift_Works1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Bill_Amount__c</fullName>
        <formula>Bill_Amount__c + Differential_Bill_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pay_Amount__c</fullName>
        <formula>Pay_Amount__c + Differential_Pay_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Shift Work</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Daily_Hrs__c</columns>
        <columns>OT_Hrs__c</columns>
        <columns>DT_Hrs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SW-{MM}{DD}{YY}-{0}</displayFormat>
        <label>Shift Work Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Works</pluralLabel>
    <recordTypes>
        <fullName>Child_Shift_Work</fullName>
        <active>true</active>
        <label>Child Shift Work</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Shift_Work</fullName>
        <active>true</active>
        <label>Parent Shift Work</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Populate_Parent_Shift_Work_On_Child_SW</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordTypeId  == &apos;012110000000zHv&apos;,ISBLANK(Parent_Shift_Work__c))</errorConditionFormula>
        <errorDisplayField>Parent_Shift_Work__c</errorDisplayField>
        <errorMessage>Parent Shift Work Field should be populated on Child Shift Work</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_Time_difference_greater_than_2</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR(  End_Date_Time_Entered__c  -   Start_Date_Time_Entered__c  ) &gt;= 2</errorConditionFormula>
        <errorMessage>Difference between Start Date &amp; End Date should not be more than 2 days</errorMessage>
    </validationRules>
</CustomObject>